Set up CI with Azure Pipelines

--- a/readme.org
+++ b/readme.org
@@ -1,3 +1,5 @@
+#+html: <p align="left"><img src="https://dev.azure.com/sereactive/reactive/_apis/build/status/samienne.reactive?branchName=master" /></p>
+
 * About
 
   Reactive is a simple to use graphical user interface (GUI) toolkit library
