--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,4 @@
-#+html: <p align="center"><img src="https://dev.azure.com/sereactive/reactive/_apis/build/status/samienne.reactive?branchName=master" /></p>
+#+html: <p align="left"><img src="https://dev.azure.com/sereactive/reactive/_apis/build/status/samienne.reactive?branchName=master" /></p>
 
 * About
 
